fix(covidExplorer): dropdown overlaps into next column

--- a/explorer/client/ExplorerControls.scss
+++ b/explorer/client/ExplorerControls.scss
@@ -113,13 +113,18 @@ $chart-border-radius: 2px;
         &.count {
             width: unset;
         }
+
+        .intervalDropdown {
+            width: 100%;
+        }
     }
 }
 
 .intervalDropdown {
     font-size: 13px;
     font-weight: 400;
-    min-width: 150px;
+    width: 150px;
+    max-width: 100%;
 }
 
 @keyframes slideUp {
